--- a/K-NAI1-WISPMANHOTSPOT4/style.css
+++ b/K-NAI1-WISPMANHOTSPOT4/style.css
@@ -159,7 +159,9 @@ a:hover {
     padding: 3px;
     margin: 0;
 }
-
+.border-b{
+    border-bottom: 1px solid black;
+}
 .speed-text {
     color: red;
     padding: 3px;
@@ -202,7 +204,9 @@ a:hover {
 .border-2 {
     border-width: 2px
 }
-
+.w-full{
+    width: 100%;
+}
 .flex {
     display: flex
 }
@@ -210,26 +214,38 @@ a:hover {
 .flex-col {
     flex-direction: column
 }
-
+.gap-10{
+    gap: 30px;
+}
 .justify-center {
     justify-content: center
 }
-
+.justify-between{
+    justify-content: space-between;
+}
 .px-1 {
     padding-left: .25rem;
     padding-right: .25rem
 }
-
+.p-30{
+    padding: 30px;
+}
 .py-1 {
     padding-top: .25rem;
     padding-bottom: .25rem
 }
-
-.h-28 {
-    height: 7rem;
-    word-break: break-all
+.pr-30{
+    padding-right: 30px;
 }
-
+.my-10{
+    margin: 10px 0 10px 0;
+}
+.m-20{
+    margin: 20px;
+}
+.w-half{
+    width: 50%;
+}
 .w-28 {
     width: 7rem;
     word-break: break-all
@@ -300,8 +316,12 @@ a:hover {
     justify-content: center;
     align-items: center;
     width: 100%;
+    border-bottom: 1px solid #000;
+    padding: 30px;
 }
-
+.inp:focus{
+    outline: auto;
+}
 .input {
     color: #fff;
     font-size: 0.9rem;
@@ -540,7 +560,7 @@ hr {
 
 .login .s-login .header {
     font-size: 24px;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     color: #035049;
     font: small-caps bold 24px/1 sans-serif;
 }
@@ -564,13 +584,15 @@ hr {
 }
 
 .login .code {
-    border: 2px solid #ff0707;
+    /* border: 2px solid #ff0707; */
     border-radius: 4px;
     border-bottom: 1px #959595 solid;
 }
-
+.border-right{
+    border-right: 1px solid black;
+}
 .login .s-login .password {
-    border: 2px solid #06e2ff;
+    /* border: 2px solid #06e2ff; */
     border-radius: 4px;
     border-bottom: 1px #959595 solid;
 }
@@ -690,20 +712,27 @@ hr {
 }
 
 .btn-reconnect {
-    background-image: linear-gradient(to right, #ee221b 0%, #98fa56 100%);
+    background: red;
     box-shadow: 0px 7px 7px 0px rgba(5, 32, 56, 0.19);
     margin: 10px;
     min-width: 280px;
     padding: 6px;
-    border: 0px solid #a99c2d;
-    border-radius: 33em;
+    border-radius: 10px;
     font-size: 18px;
+    font-weight: bold;
     color: white;
-    font-weight: 300;
+    outline: none;
+    border: none;
+    transition: .2s ease-in;
+    
+}
+.btn-reconnect:hover{
+    background: rgb(238, 53, 53);
 }
 
 .btn-activate {
-    background-image: linear-gradient(to right, #92fe9d 0%, #00c9ff 100%);
+    /* background-image: linear-gradient(to right, #92fe9d 0%, #00c9ff 100%); */
+    background-color: 00c9ff;
     box-shadow: 0px 7px 7px 0px rgba(5, 32, 56, 0.19);
     margin: 10px;
     min-width: 280px;
